2007-03-30  Benoît Dejean  <benoit@placenet.org>

	* src/disks.cpp:

	No need for FP code.

2007-03-28  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/util.cpp:
	* src/util.h:
	
	Changes needed by incoming cleanup/fixes.
	
	procman::size_cell_data_func: new function.
	UnrefMapValues::operator(): added a check.

2007-03-27  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/interface.cpp:

	Little cleanup. Removed dozens of unnecessary gtk_widget_show.

2007-03-12  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	
	Released 2.18.0.

2007-03-12  Benoît Dejean  <benoit@placenet.org>

	* gnome-system-monitor.desktop.in.in:
	
	Dropped X-Red-Hat-Base.

2007-03-11  Benoît Dejean  <benoit@placenet.org>

	* gnome-system-monitor.desktop.in.in:
	
	Gnome Goal #3 : removed "Application" category from .desktop file.
	
	* src/callbacks.cpp:

	Fixed copyright and Paolo name.

2007-03-04  Benoît Dejean  <benoit@placenet.org>

	* src/interface.cpp:
	
	Fixed CPU labels layout when there is a lot of CPU.
	Closes bug #413919.

2007-03-04  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/load-graph.cpp:
	
	Re-implemented the network autoscaling.
	It's nicer but the displayed scale is still meaningless.

2007-03-02  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/openfiles.cpp:
	
	Fixed cast.
	Really fixed bug #412953.

2007-02-28  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	
	Released 2.17.95.

2007-02-28  Benoît Dejean  <benoit@placenet.org>

	* src/sysinfo.cpp:
	
	Get default system information with uname.
	Patch by Joe Marcus Clarke <marcus@freebsd.org>.
	See bug #412953.	

2007-02-28  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/openfiles.cpp:
	
	Fixed build on FreeBSD.
	Patch by Joe Marcus Clarke <marcus@freebsd.org>.
	See bug #412953.

2007-02-28  Mariano Suárez-Alvarez  <mariano@gnome.org>

	* NEWS:
	
	Released 2.17.94.

2007-02-28  Mariano Suárez-Alvarez  <mariano@gnome.org>
