@@ -1,3 +1,9 @@
+2007-04-01  Benoît Dejean  <benoit@placenet.org>
+
+	* src/disks.cpp:
+	
+	More debug prints.
+
 2007-03-30  Benoît Dejean  <benoit@placenet.org>
 
 	* src/disks.cpp:
